--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.5.2",
+    "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1"
-  }
+    "eslint-config-next": "14.0.1",
+    "postcss": "^8",
+    "prisma": "^5.5.2",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  },
+  "main": "index.js",
+  "repository": "https://github.com/obzva/nextjs-postgresql-prisma-auth.git",
+  "author": "obzva <dngyng1000@gmail.com>",
+  "license": "MIT"
 }
