--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.5.2",
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -25,6 +29,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
+    "prettier": "^3.0.3",
     "prisma": "^5.5.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
